--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ before_script:
 
 build:
   stage: build
+  image: docker:latest
   script:
     - docker build --pull -t $TEST_IMAGE .
     - docker push $TEST_IMAGE
@@ -27,5 +28,12 @@ release:
     - docker pull $TEST_IMAGE
     - docker tag $TEST_IMAGE $RELEASE_IMAGE
     - docker push $RELEASE_IMAGE
-  only:
-    - master
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+      when: never
+    - if: '$CI_COMMIT_REF_NAME == "production"'
+  environment:
+    name: $CI_COMMIT_REF_NAME
+    url: https://localhost/
+
+
