--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ variables:
   TEST_IMAGE: registry.ubx.ph/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
   RELEASE_IMAGE: registry.ubx.ph/$CI_PROJECT_PATH:latest
 
-before_script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ubx.ph
+#before_script:
+#  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ubx.ph
 
 build:
   stage: build
