--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
 
 test:
   stage: test
-  image: docker:18.09.7
+  image: docker:18.09.7-dind
   script:
     #- setup_docker
     - docker run -t $TEST_IMAGE
