--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,10 @@ build:
 
 test:
   stage: test
-  image: docker:18.09.7-dind
+  image: docker:18.09.7
+  services:
+      - docker:18.09.7-dind
+
   script:
     #- setup_docker
     - docker run -t $TEST_IMAGE
