--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,10 @@ build:
 
 test:
   stage: test
-  image: docker:18.09.7
+  image: buildah/buildah
   script:
     #- setup_docker
-    - docker run -t $TEST_IMAGE /bin/sh init.sh
+    - podman run -t $TEST_IMAGE /bin/sh init.sh
 
 release:
   stage: release
