--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test:
     - docker:18.09.7-dind
   script:
     #- setup_docker
-    - docker run -t $TEST_IMAGE /bin/sh init.sh
+    - docker run -t $TEST_IMAGE
 
 release:
   stage: release
