--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,9 @@ build:
   stage: build
   image: buildah/buildah
   script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker build --pull -t $TEST_IMAGE .
-    - docker push $TEST_IMAGE
+    - podman login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - podman build --pull -t $TEST_IMAGE .
+    - podman push $TEST_IMAGE
 
 test:
   stage: test
