--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,14 +41,14 @@ release:
     name: $CI_COMMIT_REF_NAME
     url: https://localhost/
 
-.functions: &functions |
-  function setup_docker() {
-      if ! docker info &>/dev/null; then
-        if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
-          export DOCKER_HOST='tcp://localhost:2375'
-        fi
-      fi
-    }
+#.functions: &functions |
+#  function setup_docker() {
+#      if ! docker info &>/dev/null; then
+#        if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+#          export DOCKER_HOST='tcp://localhost:2375'
+#        fi
+#      fi
+#    }
 
 #before_script:
 #  - *functions
