--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ test:
   #services:
   #  - docker:18.09.7-dind
   script:
-    - setup_docker
+    #- setup_docker
     - docker run -t $TEST_IMAGE
 
 release:
